# PlatforMa-o11y-example

./: README.md
agents/: Dockerfile  pyproject.toml
agents/src/: architecture.yaml  main.py  orchestrator.py
agents/src/agents/: chat_agent.py  diagnostic.py  health_checker.py  remediation.py
agents/src/tools/: argocd.py  cloudwatch.py  github.py  kubectl.py  prometheus.py
agents/tests/: conftest.py  test_main.py  test_models.py
app/: Dockerfile  go.mod  main.go
github-ci-workflow/: pipeline.yml
helm/argocd-apps/: monitoring.yaml  platformma-app.yaml
helm/monitoring/: Chart.yaml  values.yaml
helm/observability-agents/: Chart.yaml  values.yaml
helm/observability-agents/templates/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  cronjob.yaml  deployment.yaml  prometheusrule.yaml  service.yaml  serviceaccount.yaml
helm/platformma-app/: Chart.yaml  values.yaml
helm/platformma-app/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
incidents/: 20260518-212852-incident-5.md  20260518-231527-incident-10.md  20260518-234455-incident-17.md
terraform/bootstrap/: main.tf
terraform/infra/: argocd.tf  eks.tf  github-actions-iam.tf  main.tf  observability-agents.tf  outputs.tf  prometheus.tf  security-groups.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
