[project]
name = "platformma-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "kubernetes>=31.0.0",
    "pygithub>=2.4.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.1",
    "schedule>=1.2.0",
    "gitpython>=3.1.43",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
